# gearbox

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README.tpl  TEST_STATUS.md  build-test.bash  gearbox-cli.yaml  grcov-to-markdown.py
src/: lib.rs
src/collections/: mod.rs
src/collections/const_hash_map/: mod.rs
src/collections/hash_map/: mod.rs
src/collections/simple_linked_list/: mod.rs
src/collections/vec_deque/: mod.rs
src/common/: boxed_future.rs  ip_range.rs  merge.rs  mod.rs  process.rs  serde_checks.rs  socket_bind_addr.rs  try_default.rs  vec_ext.rs
src/did/: mod.rs
src/did/sld/: mod.rs
src/did/sld/processor/: mod.rs
src/error/: mod.rs  type_registry.rs
src/error/tracer/: error_macro.rs  extended_info.rs  mod.rs
src/log/: mod.rs
src/log.b/: mod.rs
src/log.b/common/: macros.rs
src/log.b/syslog/: macros.rs  mod.rs
src/log.b/tracing/subscriber/: formatter.rs  mod.rs
src/log.b/tracing/subscriber/entity/: facility.rs  mod.rs  severity.rs
src/log/common/: macros.rs  mod.rs
src/log/fmt/: facility.rs  formatter.rs  index.rs  log_layer.rs  log_value.rs  mod.rs  severity.rs  storage.rs  util.rs  value.rs
src/log/fmt/layer/: bunyan.rs  mod.rs  syslog.rs
src/log/service/discovery/: mod.rs
src/log/service/discovery/entity/: config.rs  discovery.rs  mod.rs
src/log/service/discovery/services/: deeplog.rs
src/log/syslog/: facility.rs  macros.rs  mod.rs  severity.rs
src/log/tracing/: index.rs  mod.rs  value.rs
src/log/tracing/entity/: mod.rs
src/log/tracing/entity/deeplog/: caller.rs  device.rs  mod.rs  process_info.rs  system_info.rs  timestamp.rs
src/log/tracing/entity/syslog/: facility.rs  mod.rs  severity.rs
src/log/tracing/formatter/: mod.rs
src/log/tracing/formatter/bunyan/: mod.rs
src/log/tracing/formatter/deeplog/: mod.rs
src/log/tracing/formatter/syslog/: mod.rs
src/log/tracing/layer/: log_layer.rs  mod.rs  storage.rs
src/log/tracing/macros/: common.rs  mod.rs  syslog.rs
src/net/: endpoint_config.rs  hostname.rs  ip.rs  ips.rs  mod.rs  socket_addr.rs  socket_bind_addr.rs
src/net/http/: mod.rs
src/net/http/dyno_request/: mod.rs  response.rs  status_code.rs  url.rs
src/net/http/dyno_request/header/: header.rs  name.rs  value.rs
src/net/http/request/: body.rs  client.rs  error.rs  mod.rs  request_builder.rs  response.rs  status_code.rs  url.rs  utils.rs
src/net/http/request/header/: header.rs  map.rs  mod.rs  name.rs  value.rs  values.rs
src/net/http/request_chaining/: body.rs  mod.rs
src/net/http/test/: test_server.rs
src/net/signature/: helpers.rs  mod.rs
src/net/socket_addr/: mod.rs  socket_addr.rs  socket_addr_error.rs  socket_addr_try_with_builder.rs  socket_addr_with_builder.rs  socket_addrs.rs  socket_addrs_error.rs  socket_addrs_try_with_builder.rs  socket_addrs_with_builder.rs
src/path/: mod.rs
src/rails/: mod.rs
src/rails/ext/: if_then.rs  map_err_tracer.rs  map_into.rs  merge.rs  mod.rs
src/rails/ext/blocking/: do.rs  if_then.rs  into.rs  map_err_tracer.rs  map_into.rs  merge.rs  mod.rs  tap.rs  tap_optional.rs  tap_result.rs
src/rails/ext/future/: future_ext.rs  mod.rs  private_utils.rs
src/rails/ext/future/ext/: mod.rs
src/rails/tracing/: common.rs  mod.rs  syslog.rs
src/serde/: mod.rs
src/serde/dynamic/: mod.rs
src/serde/dynamic/test/: test_constants.rs  test_trait_impl.rs
src/serde/wasm_bindgen/: de.rs  error.rs  mod.rs  ser.rs
src/service/: mod.rs
src/service/discovery/: mod.rs  service.rs  service_binding.rs  service_discovery.rs
src/service/discovery/advertisement/: capture.rs  mod.rs  transformer.rs  validation.rs
src/service/discovery/discovery_type/: broadcaster.rs  mod.rs
src/service/discovery/discovery_type/discoverer/: error.rs  mod.rs
src/service/discovery/entity/: advertiser_config.rs  config.rs  discoverer_config.rs  discovery.rs  mod.rs
src/service/discovery/loggers/: deeplog.rs  mod.rs
src/service/discovery/services/: common.rs  deeplog.rs  mod.rs
src/service/framework/: mod.rs
src/service/framework/axum/: advertiser_builder.rs  app_state.rs  bindable.rs  connection.rs  connection_builder.rs  discovery_builder.rs  executor.rs  framework_manager.rs  framework_state.rs  hyper_config.rs  log_formatter.rs  log_output_style.rs  mod.rs  module_manager.rs  server_builder.rs  server_framework_config.rs
src/service/framework/axum/builders/: mod.rs  shutdown_signal_capture.rs  spin_server.rs
src/service/framework/axum/connection/: builder.rs  connection.rs
src/service/framework/axum/discovery/: common_message.rs
src/service/framework/axum/logger/: log_formatter_wrapper.rs  mod.rs  output.rs
src/service/framework/axum/module/: definition.rs  manager.rs  mod.rs  module.rs
src/service/framework/axum/probe/: probe_result.rs  status_response.rs  status_responses.rs
src/service/framework/axum/state/: mod.rs
src/service/framework/axumv1/: framework_manager.rs  mod.rs  server_builder.rs  server_framework_config.rs  state_controller.rs  status.rs
src/service/framework/axumv1/builders/: mod.rs  shutdown_signal_capture.rs  spin_server.rs
src/service/framework/axumv1/connection/: builder.rs  connection.rs  mod.rs
src/service/framework/axumv1/discovery/: common_message.rs
src/storage/: json.rs  mod.rs  selective_storage.rs  yaml.rs
src/storage/io/file/: error.rs  ext.rs  mod.rs
src/storage/web/: mod.rs
src/storage/web/local_storage/: error.rs  ext.rs  mod.rs
src/sync/: container.rs  mod.rs  relax.rs
src/sync/container/: common_key_container.rs  common_type_container.rs  mod.rs
src/sync/deferred/: mod.rs
src/sync/rw_arc/: detatched_rw_arc.rs  hyper_read_arc.rs  hyper_write_arc.rs  mod.rs  read_arc.rs  rw_arc.rs  upgradable_arc.rs  write_arc.rs
src/task/: mod.rs  runner.rs  task.rs
src/task/multicommand/: command_response.rs  function.rs  mod.rs  shellcommand.rs
src/template/: engine.rs  mod.rs  pipeline.rs
src/template/pipelines/: date_time.rs  mod.rs  prefix.rs
src/time/: cache.rs  constants.rs  constants_utils.rs  date_time.rs  duration.rs  error.rs  mod.rs  seconds_format.rs  utils.rs
(+45 files in other folders)
