[package]
name = "gearbox"
version = "2.0.3"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "Excessive tooling for Rust, boosting productivity and operations"
readme = "README.md"
categories = ["date-and-time", "asynchronous", "network-programming", "development-tools::debugging"]
keywords = ["tooling"]
license = "MIT"
repository = "https://github.com/nebula-technologies/gearbox"
resolver = "2"

[package.metadata.docs.rs]
# Indicate that the README should be used as the main page
rustdoc-args = ["--document-private-items", "--html-in-header", "README.md"]


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["web", "http-request", "common-dirs", "syslog-macro", "http-request-chaining", "serde-dynamic-defaults", "net-signature", "std", "type-registry"]
web = ["web-sys", "web-storage", "js-sys"]
web-storage = ["web-sys/Storage", "web-sys/Window"]
http-request = ["http"]
http-request-chaining = ["http-request"]
http = ["reqwest"]
common-dirs = ["dirs"]
std = []
did = ["didkit"]
syslog-macro = []
log-macro = []

## Tracing Loggers
bunyan = []

## TypeRegistry
type-registry = []

## Net Signature
net-signature = ["hex", "base64", "hmac", "sha2", "bs58", "sign-toml", "sign-yaml", "sign-json", "sign-query-string", "serde-dynamic"]
sign-toml = ["serde-toml"]
sign-yaml = ["serde-yaml"]
sign-json = ["serde-json"]
sign-query-string = ["serde-query-string"]

## Serde Dynamic implementation
serde-dynamic = []
serde-dynamic-defaults = ["serde-dynamic", "serde-json", "serde-yaml", "serde-toml", "serde-query-string"]
serde-dynamic-all = ["serde-dynamic", "serde-avro", "serde-bson", "serde-json5", "serde-flexbuffers", "serde-postcard", "serde-messagepack", "serde-ron", "serde-lexpr", "serde-pickle", "serde-cbor", "serde-json", "serde-query-string", "serde-yaml", "serde-toml"]
serde-accept-limited-xml-serialize = ["serde-xml-rs"]
serde-avro = ["apache-avro"]
serde-bson = ["dep:bson"]
serde-json5 = ["dep:json5"]
serde-flexbuffers = ["dep:flexbuffers"]
serde-postcard = ["dep:postcard"]
serde-messagepack = ["rmp-serde"]
serde-ron = ["dep:ron"]
serde-lexpr = ["dep:serde-lexpr"]
serde-pickle = ["dep:serde-pickle"]
serde-cbor = ["serde_cbor"]
serde-json = ["serde_json"]
serde-query-string = ["serde_qs"]
serde-yaml = ["dep:serde_yaml"]
serde-toml = ["dep:toml"]


# This is for activating all features for the current Arch
full = ["net-signature", "web", "http-request", "http"]

[dependencies]
derive_more = "0.99.17"
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9.33", optional = true }
serde = "1"
tracing = "0.1.40"
libc = "0.2.155"
tracing-subscriber = "0.3.18"
num-traits = "0.2.19"
spin = "0.9.8"
hashbrown = { version = "0.14.5", features = ["serde"] }

url = "2.5.1"
serde_derive = "1.0.203"

## These are mainly used for "dirs" feature
##
dirs = { version = "5.0.1", optional = true }

## These are mainly used for "http-request" feature
##
reqwest = { version = "0.12.4", features = ["default"], optional = true }

## These are mainly used for "net-signature" feature
##
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.0", optional = true }
hmac = { version = "0.13.0-pre.3", optional = true }
sha2 = { version = "0.11.0-pre.3", optional = true }
bs58 = { version = "0.5.1", optional = true }

## These are mainly used for "DID" feature
didkit = { version = "0.6.0", optional = true }

## These are mainly used for "web" feature
web-sys = { version = "0.3.69", optional = true }
js-sys = { version = "0.3.69", optional = true }
uniffi_macros = { version = "0.28" }
uniffi = { version = "0.28", features = ["build", "cli"] }

## TODO Might not be needed here
bytes = "1.6.0"
semver = "1.0.23"

## Serde Dynamic implementation
apache-avro = { version = "0.16.0", features = ["snappy"], optional = true }
bson = { version = "2.10.0", optional = true }
flexbuffers = { version = "2.0.0", optional = true }
json5 = { version = "0.4.1", optional = true }
postcard = { version = "1.0.8", features = ["alloc"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
ron = { version = "0.9.0-alpha.0", optional = true }
serde-lexpr = { version = "0.1.3", optional = true }
serde-pickle = { version = "1.1.1", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
serde_cbor = { version = "0.11.2", optional = true }
serde_qs = { version = "0.13.0", optional = true }
toml = { version = "0.8.12", optional = true }
hyper = "1.3.1"
pin-project-lite = "0.2.14"
futures = "0.3.30"
regex = "1.10.5"
chrono = "0.4.38"
lazy_static = "1.5.0"
erased-serde = "0.4.5"
lock_api = "0.4.12"


## These are mainly used for "Wasm32" implementations
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "rt", "macros"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen-futures]
version = "0.4.42"


[dev-dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
wasm-bindgen-test = "0.3.42"
